Fix table column alignment issue

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,3 @@ table tr:nth-child(2n + 1) *, table tr *:nth-child(2n + 1) {
 table td, table th {
     padding: 4px;
 }
-
-table tr {
-    display: flex;
-}
